changed wordname to name

--- a/details.html
+++ b/details.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="text-center">
-    <h1>{{words[selWord].wordname}}</h1>
+    <h1>{{words[selWord].name}}</h1>
     <p>{{words[selWord].voting}} Stimmen (Rang: {{selWord+1}})</p>
     <button ng-click="increaseVoting(selWord); save(); showMsg=1" type="button" class="btn btn-default btn-lg btn-thumbs-up">
       <span class="glyphicon glyphicon-thumbs-up"></span>
