--- a/zufallswort.html
+++ b/zufallswort.html
@@ -1,6 +1,6 @@
 <div class="jumbotron" ng-init="randomWord()">
   <div class="text-center">
-    <h1>{{words[random].wordname}}</h1>
+    <h1>{{words[random].name}}</h1>
     <p>{{words[random].voting}} Stimmen (Rang: {{random+1}})</p>
     <button ng-click="increaseVoting(random); save(); showMsg=1" type="button" class="btn btn-default btn-lg btn-thumbs-up">
       <span class="glyphicon glyphicon-thumbs-up"></span>
